// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`StargazersCard should match the snapshot with empty username and empty image 1`] = `
<View
  style={
    {
      "alignItems": "center",
      "backgroundColor": "white",
      "borderRadius": 10,
      "elevation": 5,
      "flexDirection": "row",
      "marginTop": 5,
      "padding": "1%",
      "shadowColor": "#000",
      "shadowOffset": {
        "height": 2,
        "width": 0,
      },
      "shadowOpacity": 0.25,
      "shadowRadius": 3.84,
      "width": "100%",
    }
  }
>
  <Image
    source={
      {
        "uri": "",
      }
    }
    style={
      {
        "height": 70,
        "width": 70,
      }
    }
  />
  <Text
    style={
      {
        "marginLeft": 10,
      }
    }
  />
</View>
`;

exports[`StargazersCard should match the snapshot with username and avatar image 1`] = `
<View
  style={
    {
      "alignItems": "center",
      "backgroundColor": "white",
      "borderRadius": 10,
      "elevation": 5,
      "flexDirection": "row",
      "marginTop": 5,
      "padding": "1%",
      "shadowColor": "#000",
      "shadowOffset": {
        "height": 2,
        "width": 0,
      },
      "shadowOpacity": 0.25,
      "shadowRadius": 3.84,
      "width": "100%",
    }
  }
>
  <Image
    source={
      {
        "uri": "https://avatars.githubusercontent.com/u/18049606?v=4",
      }
    }
    style={
      {
        "height": 70,
        "width": 70,
      }
    }
  />
  <Text
    style={
      {
        "marginLeft": 10,
      }
    }
  >
    test
  </Text>
</View>
`;

exports[`StargazersCard should match the snapshot with username and empty image 1`] = `
<View
  style={
    {
      "alignItems": "center",
      "backgroundColor": "white",
      "borderRadius": 10,
      "elevation": 5,
      "flexDirection": "row",
      "marginTop": 5,
      "padding": "1%",
      "shadowColor": "#000",
      "shadowOffset": {
        "height": 2,
        "width": 0,
      },
      "shadowOpacity": 0.25,
      "shadowRadius": 3.84,
      "width": "100%",
    }
  }
>
  <Image
    source={
      {
        "uri": "",
      }
    }
    style={
      {
        "height": 70,
        "width": 70,
      }
    }
  />
  <Text
    style={
      {
        "marginLeft": 10,
      }
    }
  >
    test
  </Text>
</View>
`;
